working on footer styling

--- a/style.css
+++ b/style.css
@@ -12,40 +12,97 @@ body {
 .wrapper {
   max-width: 1200px;
   margin: 0 auto;
+  padding-bottom: 2.5rem;
 }
 
 .header-container {
   background: #beeae9;
-  background-repeat: no-repeat;
-  background-size: contain;
   height: 50vh;
   display: flex;
   align-items: center;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  position: static;
-  left: 0px;
-  top: 0px;
-  flex: none;
-  order: 0;
-  align-self: stretch;
-  flex-grow: 1;
-  margin: 0px 0px;
+  position: relative;
+  max-height: 100vh;
 }
 
 /* hero border  */
 header .hero-logo {
   position: relative;
 }
-/* 
-header .hero-logo .photo-bg{
+
+.pattern-right,
+.pattern-left {
   position: absolute;
-  width: 360.6px;
-  height: 434.88px;
-  left: -30em;
-  top: -4em;
-  background: url("images/patternleft.png");
-  background-repeat: no-repeat;
-} */
-
+}
+.pattern-right {
+  left: 1099.97px;
+  top: -157px;
+}
 /* intro section styling */
+.survey-highlights {
+  background: #e7f4f6;
+  border-radius: 10px;
+  /* position: absolute; */
+}
 
+/* footer styling */
+.footer-container {
+  background: #2b3237;
+  height: 348px;
+  bottom: 0px;
+  position: absolute;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+h4 {
+  color: #ffffff;
+  font-family: "Rubik", sans-serif;
+  font-size: 28px!important;
+  line-height: 52.08px;
+  text-align: center;
+  height: 52px;
+  width: 523px;
+  font-weight: 700 !important;
+}
+
+.text-input {
+  position: absolute;
+  width: 259px;
+  height: 51px;
+  left: calc(50% - 259px / 2 - 100.5px);
+  top: calc(50% - 51px / 2 + 33.25px);
+
+  background: #fafafa;
+  border: 1px solid #c0cad2;
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+span {
+  position: absolute;
+  width: 190px;
+  height: 51px;
+  left: calc(50% - 190px / 2 + 111px);
+  top: calc(50% - 51px / 2 + 33.25px);
+  background: #e7736b;
+  border-radius: 12px;
+}
+
+h5 {
+  position: absolute;
+  width: 141px;
+  height: 37px;
+  left: calc(50% - 141px / 2 + 0.5px);
+  top: calc(50% - 37px / 2 + 1px);
+  font-family: "Rubik", sans-serif;
+  font-style: normal;
+  font-weight: 700!important;
+  font-size: 20px;
+  line-height: 37.2px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #ffffff;
+}
