--- a/style.css
+++ b/style.css
@@ -16,44 +16,64 @@ body {
 }
 
 .header-container {
-  background: #beeae9;
-  height: 50vh;
-  display: flex;
-  align-items: center;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  position: relative;
-  max-height: 100vh;
+  position: sticky;
+  width: 189vh;
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .header-container {
+    width: 100vh;
+    height: 31vh;
+  }
 }
 
 /* hero border  */
-header .hero-logo {
-  position: relative;
+.hero-logo img {
+  position: absolute;
+  top: 67px;
+  left: 492px;
 }
 
-.pattern-right,
-.pattern-left {
-  position: absolute;
-}
-.pattern-right {
-  left: 1099.97px;
-  top: -157px;
-}
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    .hero-logo img{
+      width: 21em;
+      left: 13em;
+      top: 2em;
+      position: absolute;
+    }
+  }
+
+
 /* intro section styling */
 .intro-section {
   position: static;
   height: 862px;
   left: 0px;
   top: 403px;
-  background-color:#FFFFFF;
+  background-color: #ffffff;
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .intro-section {
+    background-color: green;
+    width: 100vh;
+    flex-direction: column;
+    height: 200vh;
+    margin-top: -3em;
+  }
 }
 
 .section-content {
-    background: red;
-    position: relative;
-    height: 704px;
-    margin-top: 56px;
-    margin-left: 131px;
-    margin-right: 131px;
+  background: red;
+  position: relative;
+  height: 704px;
+  margin-top: 56px;
+  margin-left: 131px;
+  margin-right: 131px;
 }
 
 .header-left-col {
@@ -65,21 +85,21 @@ header .hero-logo {
   color: #2b3237;
 }
 
-.txt-left-col, .second-txt-left-col{
-    /* color: pink; */
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 33.48px;
-    padding-bottom: 15px;
+.txt-left-col,
+.second-txt-left-col {
+  /* color: pink; */
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 33.48px;
+  padding-bottom: 15px;
 }
 
 .txt-box {
-    /* background-color: orange; */
-    width: 462px;
-    position: absolute;
-    height: 599px;
-    margin-top: 30px;
-    margin-left: 240px;
+  /* background-color: orange; */
+  width: 462px;
+  position: absolute;
+  height: 599px;
+  margin-top: 30px;
 }
 
 /* survey container styling */
@@ -90,60 +110,67 @@ header .hero-logo {
   /* background: #e7f4f6; */
   background: pink;
   border-radius: 10px;
-  margin-right: 250px;
   margin-left: auto;
 }
 
- ul {
-     list-style-type: none;
-     background-color: orange;
-     width: 450px;
-     float: right;
-     margin-right: 50px;
-     
-    }
-
-.survey-header {
-    font-family: "Rubik", sans-serif;
-    font-weight: bold;
-    font-size: 18px;
-    line-height: 33.48px;
-    margin-left: 71px;
-    margin-bottom: 50px;
-    padding-top: 50px;
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .survey-highlights {
+    position: absolute;
+    margin-top: 700px;
+    margin-right: 100px;
+    right: -10em;
+  }
 }
 
-h6, li p{
-    font-size: 16px;
-    line-height: 29.76px;
+ul {
+  list-style-type: none;
+  background-color: orange;
+  width: 450px;
+  float: right;
+  margin-right: 50px;
+}
+
+.survey-header {
+  font-family: "Rubik", sans-serif;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 33.48px;
+  margin-left: 71px;
+  margin-bottom: 50px;
+  padding-top: 50px;
+}
+
+h6,
+li p {
+  font-size: 16px;
+  line-height: 29.76px;
 }
 
 h6 {
-    font-weight: 700!important;
-
+  font-weight: 700 !important;
 }
 
 li p {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 .icon-div {
-    background: yellow;
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    margin-left: 25px;
+  background: yellow;
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  margin-left: 25px;
 }
 
 .icon-div img {
-    padding-bottom: 50px;
+  padding-bottom: 50px;
 }
 
 .home {
-    margin-top: -27px;
-    background: red;
+  margin-top: -27px;
+  background: red;
 }
-
 
 /* footer styling */
 .footer-container {
@@ -155,7 +182,14 @@ li p {
   align-items: center;
 }
 
-.footer-header-txt{
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .footer-container {
+    width: 100vh;
+  }
+}
+
+.footer-header-txt {
   color: #ffffff;
   font-family: "Rubik", sans-serif;
   font-size: 28px;
@@ -198,7 +232,7 @@ span {
   border-radius: 12px;
 }
 
-.footer-button-txt{
+.footer-button-txt {
   position: absolute;
   width: 141px;
   height: 37px;
