--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 .header-container {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   position: sticky;
-  width: 189vh;
+  width: 100%;
 }
 
 @media only screen and (max-width: 768px) {
