fixed mobile responsive styling

--- a/style.css
+++ b/style.css
@@ -20,13 +20,12 @@ body {
   width: 100%;
 }
 
-@media only screen and (max-width: 768px) {
-  /* For mobile phones: */
+/* @media only screen and (max-width: 768px) {
   .header-container {
     width: 100vh;
     height: 31vh;
   }
-}
+} */
 
 /* hero border  */
 .hero-logo img {
@@ -36,15 +35,14 @@ body {
 }
 
 @media only screen and (max-width: 768px) {
-    /* For mobile phones: */
-    .hero-logo img{
-      width: 21em;
-      left: 13em;
-      top: 3em;
-      position: absolute;
-    }
+  /* For mobile phones: */
+  .hero-logo img {
+    width: 12em;
+    left: 8em;
+    top: 1em;
+    position: absolute;
   }
-
+}
 
 /* intro section styling */
 .intro-section {
@@ -58,10 +56,9 @@ body {
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
   .intro-section {
-    width: 100vh;
     flex-direction: column;
-    height: 200vh;
-    margin-top: -3em;
+    height: 179vh;
+    margin-top: -5em;
   }
 }
 
@@ -90,11 +87,28 @@ body {
   padding-bottom: 15px;
 }
 
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .txt-left-col,
+  .second-txt-left-col {
+    font-size: 12px;
+  }
+}
+
 .txt-box {
   width: 473px;
   position: absolute;
   height: 599px;
   margin-top: 30px;
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .txt-box {
+    width: 25em;
+    left: -8em;
+    text-align: center;
+  }
 }
 
 /* survey container styling */
@@ -111,9 +125,9 @@ body {
   /* For mobile phones: */
   .survey-highlights {
     position: absolute;
-    margin-top: 700px;
-    margin-right: 100px;
-    right: -10em;
+    margin-top: 38em;
+    width: 25em;
+    left: -8em;
   }
 }
 
@@ -122,6 +136,18 @@ ul {
   width: 450px;
   float: right;
   margin-right: 50px;
+  background: red;
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  ul {
+    background: pink;
+    width: 76%;
+    margin-right: 10px;
+    height: 32em;
+    font-size: 19px;
+  }
 }
 
 .survey-header {
@@ -134,6 +160,13 @@ ul {
   padding-top: 50px;
 }
 
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .survey-header {
+    padding-top: 33px;
+  }
+}
+
 h6,
 li p {
   font-size: 16px;
@@ -141,12 +174,19 @@ li p {
 }
 
 h6 {
-  font-weight: 700!important;
+  font-weight: 700 !important;
 }
 
 li p {
   font-weight: 400;
 }
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    li p{
+      font-size: 12px;
+    }
+  }
 
 .icon-div {
   display: flex;
@@ -158,6 +198,13 @@ li p {
 .icon-div img {
   padding-bottom: 50px;
 }
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    .icon-div img {
+      padding-bottom: 68px;
+    }
+  }
 
 .home {
   margin-top: -27px;
@@ -173,12 +220,11 @@ li p {
   align-items: center;
 }
 
-@media only screen and (max-width: 768px) {
-  /* For mobile phones: */
+/* @media only screen and (max-width: 768px) {
   .footer-container {
     width: 100vh;
   }
-}
+} */
 
 .footer-header-txt {
   color: #ffffff;
@@ -189,6 +235,17 @@ li p {
   height: 52px;
   width: 523px;
   font-weight: 700;
+}
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .footer-header-txt {
+    font-size: 20px;
+    margin-top: -6em;
+    left: -53px;
+    margin-right: 28em;
+    position: absolute;
+  }
 }
 
 .text-input {
@@ -203,6 +260,14 @@ li p {
   border-radius: 4px;
   padding: 10px;
 }
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    .text-input {
+      left: 4em;
+      top:6em;
+    }
+  }
 
 ::placeholder {
   font-family: "Rubik", sans-serif;
@@ -223,8 +288,17 @@ span {
   border-radius: 12px;
 }
 
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    span {
+     width: 157px;
+     height: 52px;
+     top: 6em;
+    }
+  }
+
 span:hover {
-    background: #66a1aa;
+  background: #66a1aa;
 }
 
 .footer-button-txt {
@@ -245,3 +319,14 @@ span:hover {
   background: none;
   border: none;
 }
+
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    .footer-button-txt{
+      font-size: 17px;
+      top: 7px;
+      left: 9px;
+      margin-right: auto;
+      margin-left: auto;
+    }
+  }
