--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 
 @media only screen and (max-width: 768px) {
   .header-container {
-    width: 64vh;
+    width: 59vh;
   }
 }
 
@@ -36,7 +36,7 @@ body {
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
   .hero-logo img {
-    width: 12em;
+    width: 10em;
     left: 8em;
     top: 1em;
     position: absolute;
@@ -91,6 +91,7 @@ body {
   .txt-left-col,
   .second-txt-left-col {
     font-size: 12px;
+    line-height: 21px;
   }
 }
 
@@ -104,7 +105,7 @@ body {
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
   .txt-box {
-    width: 25em;
+    width: 20em;
     left: -6em;
     text-align: center;
   }
@@ -124,8 +125,8 @@ body {
   /* For mobile phones: */
   .survey-highlights {
     position: absolute;
-    margin-top: 38em;
-    width: 29em;
+    margin-top: 31em;
+    width: 24em;
     left: -8em;
   }
 }
@@ -140,7 +141,6 @@ ul {
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
   ul {
-    background: pink;
     width: 76%;
     margin-right: 10px;
     height: 32em;
@@ -200,7 +200,7 @@ li p {
 @media only screen and (max-width: 768px) {
     /* For mobile phones: */
     .icon-div img {
-      padding-bottom: 48px;
+      padding-bottom: 70px;
     }
   }
 
@@ -220,7 +220,7 @@ li p {
 
 @media only screen and (max-width: 768px) {
   .footer-container {
-    width: 64vh;
+    width: 393px;
 
   }
 }
@@ -241,7 +241,7 @@ li p {
   .footer-header-txt {
     font-size: 20px;
     margin-top: -6em;
-    left: -26px;
+    left: -3em;
     margin-right: 28em;
     position: absolute;
   }
@@ -263,7 +263,7 @@ li p {
 @media only screen and (max-width: 768px) {
     /* For mobile phones: */
     .text-input {
-      left: 4em;
+      left: 2em;
       top:6em;
     }
   }
