--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   font-family: "Lato", sans-serif;
 }
 
+
 /* header styling */
 .wrapper {
   max-width: 1200px;
@@ -221,6 +222,7 @@ li p {
 @media only screen and (max-width: 768px) {
   .footer-container {
     width: 393px;
+    margin-top: 2em
 
   }
 }
@@ -239,9 +241,9 @@ li p {
 @media only screen and (max-width: 768px) {
   /* For mobile phones: */
   .footer-header-txt {
-    font-size: 20px;
+    font-size: 18px;
     margin-top: -6em;
-    left: -3em;
+    left: -63px;
     margin-right: 28em;
     position: absolute;
   }
